--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -222,6 +222,8 @@
 .landing-h2-info-1 {
   position: absolute;
   top: 0;
+  left: 0;
+  opacity: 0;
 }
 h2.landing-info-h2 {
   color: var(--accentColor);
@@ -236,6 +238,8 @@ h2.landing-info-h2 {
 .landing-h2-2 {
   position: absolute;
   top: 0;
+  left: 0;
+  opacity: 0;
 }
 .landing-info-h2::after {
   content: "";
